--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "crypto-js": "^3.1.9-1",
     "express": "^4.16.4",
@@ -21,6 +22,7 @@
     "lodash": "^4.17.11",
     "mongodb": "^3.1.10",
     "mongoose": "^5.3.16",
+    "save": "^2.3.3",
     "validator": "^10.9.0"
   },
   "devDependencies": {
